--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <section class="hero" id="home">
     <main class="content">
       <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quam.</p>
+      <p>Temukan cita rasa kopi terbaik, diseduh dengan sepenuh hati untuk menemani setiap momen berharga Anda.</p>
       <a href="#" class="cta">Beli Sekarang</a>
     </main>
    </section>
@@ -56,8 +56,8 @@
       </div>
       <div class="content">
         <h3>Kenapa memilih kopi kami?</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis molestias eligendi officia aliquid harum adipisci.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis maiores aspernatur vitae! Ea dicta commodi laudantium, numquam vero beatae reprehenderit.</p>
+        <p>Kami percaya setiap cangkir kopi menyimpan cerita. Kopi kami dipilih dari biji terbaik nusantara, disangrai dengan presisi, dan diseduh dengan cinta. Kami hadir bukan hanya untuk menyajikan minuman, tapi untuk menciptakan momen yang berarti.</p>
+        <p>Kualitas adalah prioritas kami — dari rasa yang khas, aroma yang menggugah, hingga pelayanan yang hangat. Kami ingin jadi bagian dari perjalanan harimu, satu tegukan pada satu waktu.</p>
       </div>
     </div>
    </section>
@@ -66,7 +66,7 @@
    <!-- Menu Section start -->
     <section class="menu" id="menu">
       <h2><span>Menu</span> Kami</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex at earum temporibus, saepe eveniet corporis?</p>
+      <p>Nikmati pilihan minuman terbaik kami seperti Espresso, Matcha, Iced Americano, dan Latte — diracik dengan cita rasa istimewa untuk setiap selera.</p>
 
       <div class="row">
         <div class="menu-card">
@@ -96,7 +96,7 @@
    <!-- Contact Section start -->
     <section class="contact" id="contact">
       <h2><span>Kontak</span> Kami</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quos?</p>
+      <p>Hubungi kami untuk informasi lebih lanjut, pemesanan, atau pertanyaan seputar produk dan layanan kami. Kami siap membantu Anda!</p>
 
       <div class="row">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3521.115122113965!2d106.95643827440847!3d-6.377625493612668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69950f3c6153c3%3A0x7435e23897f4f2e8!2sKopi%20Nako%20Kota%20Wisata!5e1!3m2!1sen!2sid!4v1750131137757!5m2!1sen!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
