add css masking

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kopi Kenangan Senja</title>
+  <title>Kopi Kenangan Kita</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- fonts -->
@@ -79,7 +79,6 @@
     <main class="content">
       <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
       <p>Temukan cita rasa kopi terbaik, diseduh dengan sepenuh hati untuk menemani setiap momen berharga Anda.</p>
-      <a href="#" class="cta">Beli Sekarang</a>
     </main>
    </section>
   <!-- Hero Section end -->
